src/components/HeroSection.css
video {
  object-fit: cover;
  width: 100%;
  height: 100%;
  position: fixed;
  z-index: -1;
}

a:link {
  text-decoration: none;
}

.heroContainer {
  /* background: url('/images/img-home.jpg') center center/cover no-repeat; */
  height: 55vh;
  padding-top: 5em;
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.2);
  object-fit: contain;
}

.infoContainer{
  background-color: rgb(131, 170, 185);
  padding: 10px 20px;
  border-radius: 50px;
  margin-top:45px;
}

.infoContainer > h1 {
  color: #fff;
  font-size: 100px;
}

.infoContainer > p {
  margin-top: 8px;
  color: #fff;
  font-size: 32px;
  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande',
    'Lucida Sans', Arial, sans-serif;
}

.infoButtons {
  margin-top: 32px;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.infoButtons .button {
  margin: 6px;
}

.fa-project-diagram{
  margin-left: 5px;
}

@media screen and (max-width: 960px) {
.heroContainer{
  height: 60vh
}

  .infoContainer{
    height: 50vh;
    margin-top: 150px;
    margin-bottom: 20px;
  }

  .infoContainer > h1 {
    font-size: 70px;
    margin-top: 50px

  }
}

@media screen and (max-width: 768px) {
  .infoContainer > h1 {
    font-size: 50px;
  }

  .infoContainer > p {
    font-size: 30px;
    text-align: center;
  }

  .button-mobile {
    display: block;
    text-decoration: none;
  }

  .button {
    width: 100%;
  }
}

